--- a/data/simulations/TOI-4504_simX024_03.ini
+++ b/data/simulations/TOI-4504_simX024_03.ini
@@ -25,8 +25,11 @@ rad2deg = 57.29577951308232  # 180 / pi
 result_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dt20000.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = simX024               # You can use this comment for example as diagram title in your result plots
-;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+max_intervall_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
+                             # If no TT has been found max_intervall_extensions * dt around the expected interval between 2 iterations
+                             # the search for this particular TT will be aborted. (dt comes from the list dts.)
+comment = simX024            # You can use this comment for example as diagram title in your result plots
+;verbose = True               # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
@@ -170,14 +173,14 @@ ma =        303.6
 body_type = planet
 primary =   TOI4504
 color =     0.01, 0.99, 0.01
-mass =      2.01306938619229288 * m_jup,    0.002 * m_jup,      21.4 * m_jup,           1
+mass =      1.2 * m_jup,                   .002 * m_jup,    21.4 * m_jup,          1
 radius =    1.012 * r_jup,               #
 e =         0.10527976401695996,         # 0.08,             0.11,                  1
 i =         88.8,                        # 87,               89.5,                  1
 P =         41.16768686103386 * day,     # 41.1 * day,       41.25 * day,           1
 Omega =     4.9620750482336655,          #  0,               6,                     1
 omega =     87.12992034721043,           # 85,               89,                    1
-ma =        329.9695998776485,           # 328,               330,                  1
+ma =        329.9695998776485,           # 328,              330,                   1
 
 
 [TOI4504c]
