--- a/data/simulations/TOI-4504_simX024_01.ini
+++ b/data/simulations/TOI-4504_simX024_01.ini
@@ -26,7 +26,7 @@ result_file = ../results/mcmc/archive/X024_cd11P_TT/TOI-4504_X024_maxl_dt20000.j
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = simX024               # You can use this comment for example as diagram title in your result plots
-;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
@@ -77,7 +77,7 @@ rv_offset = 2064.7           # Estimate of the velocity measurement that corresp
 
 ;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_start_end_locked.csv # <string> file with measured transit times (real data)
-tt_file = ../data/simulations/tt_simX024.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/simulations/tt_simX024.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
 eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
