--- a/data/simulations/TOI-4504_simX024_03.ini
+++ b/data/simulations/TOI-4504_simX024_03.ini
@@ -174,14 +174,14 @@ body_type = planet
 primary =   TOI4504
 color =     0.01, 0.99, 0.01
 #                startvalue                lower                upper                       used in simulation
-mass =      1.25 * m_jup,                  1.2 * m_jup,      1.4 * m_jup,           1   # 1.306938619229288 * m_jup,
-radius =    1.012 * r_jup,               #                                              # 1.012 * r_jup
-e =         0.09,                          0.08,             0.11,                  1   # 0.10527976401695996
-i =         88.8,                        # 87,               89.5,                  1   # 88.8
-P =         41.16768686103386 * day,     # 41.1 * day,       41.25 * day,           1   # 41.16768686103386 * day
-Omega =     4.9620750482336655,          #  0,               6,                     1   # 4.9620750482336655
-omega =     87.12992034721043,           # 85,               89,                    1   # 87.12992034721043
-ma =        329.9695998776485,           # 328,              330,                   1   # 329.9695998776485
+mass =      2.0 * 1.30 * m_jup,            0.5 * m_jup,       5.4 * m_jup,           1   # 1.306938619229288 * m_jup,
+radius =    1.012 * r_jup,               #                                               # 1.012 * r_jup
+e =         0.5 * 0.105,                   0.,              0.15,                  1   # 0.10527976401695996
+i =         88.8,                        # 87,                89.5,                  1   # 88.8
+P =         41.16768686103386 * day,     # 0.90 * 41.2 * day, 1.10 * 41.2 * day,     1   # 41.16768686103386 * day
+Omega =     5-15,                         5-30,                 5+30,                 1   # 4.9620750482336655
+omega =     87.12992034721043,           # 85,                89,                    1   # 87.12992034721043
+ma =        329.9695998776485,           # 328,               330,                   1   # 329.9695998776485
 
 
 [TOI4504c]
