--- a/data/simulations/TOI-4504_simX024_03.ini
+++ b/data/simulations/TOI-4504_simX024_03.ini
@@ -177,11 +177,11 @@ color =     0.01, 0.99, 0.01
 mass =      2.0 * 1.30 * m_jup,            0.5 * m_jup,       5.4 * m_jup,           1   # 1.306938619229288 * m_jup,
 radius =    1.012 * r_jup,               #                                               # 1.012 * r_jup
 e =         0.5 * 0.105,                   0.,              0.15,                  1   # 0.10527976401695996
-i =         88.8,                        # 87,                89.5,                  1   # 88.8
-P =         41.16768686103386 * day,     # 0.90 * 41.2 * day, 1.10 * 41.2 * day,     1   # 41.16768686103386 * day
+i =         88.8,                         87,                89.5,                  1   # 88.8
+P =         41.16768686103386 * day,      0.90 * 41.2 * day, 1.10 * 41.2 * day,     1   # 41.16768686103386 * day
 Omega =     5-15,                         5-30,                 5+30,                 1   # 4.9620750482336655
-omega =     87.12992034721043,           # 85,                89,                    1   # 87.12992034721043
-ma =        329.9695998776485,           # 328,               330,                   1   # 329.9695998776485
+omega =     87.12992034721043,            85,                89,                    1   # 87.12992034721043
+ma =        329.9695998776485,            328,               330,                   1   # 329.9695998776485
 
 
 [TOI4504c]
