--- a/data/simulations/TOI-4504_simX024_03.ini
+++ b/data/simulations/TOI-4504_simX024_03.ini
@@ -174,14 +174,14 @@ body_type = planet
 primary =   TOI4504
 color =     0.01, 0.99, 0.01
 #                startvalue                lower                upper                       used in simulation
-mass =      2.0 * 1.30 * m_jup,            0.5 * m_jup,       5.4 * m_jup,           1   # 1.306938619229288 * m_jup,
+mass =      1.306938619229288 * m_jup,   # 0.5 * m_jup,       5.4 * m_jup,           1   # 1.306938619229288 * m_jup,
 radius =    1.012 * r_jup,               #                                               # 1.012 * r_jup
-e =         0.5 * 0.105,                   0.,              0.15,                  1   # 0.10527976401695996
-i =         88.8,                         87,                89.5,                  1   # 88.8
-P =         41.16768686103386 * day,      0.90 * 41.2 * day, 1.10 * 41.2 * day,     1   # 41.16768686103386 * day
-Omega =     5-15,                         5-30,                 5+30,                 1   # 4.9620750482336655
-omega =     87.12992034721043,            85,                89,                    1   # 87.12992034721043
-ma =        329.9695998776485,            328,               330,                   1   # 329.9695998776485
+e =         0.10527976401695996,         # 0.,                0.15,                    1   # 0.10527976401695996
+i =         88.8,                        # 87,                89.5,                  1   # 88.8
+P =         (41.2 + 1) * day,             (41.2 - 2) * day,   (41.2 + 2)  * day,     1   # 41.16768686103386 * day
+Omega =     5-15,                        # 5-30,              5+30,               1   # 4.9620750482336655
+omega =     87+15,                       # 87-30,             87+30,                 1   # 87.12992034721043
+ma =        330-15,                      # 330-30,            330+29.99,             1   # 329.9695998776485
 
 
 [TOI4504c]
@@ -193,7 +193,7 @@ mass =      3.5913902107546636 * m_jup,  # 3.3 * m_jup,       3.8 * m_jup,      
 radius =    0.9897 * r_jup,              #                                              # 0.9897 * r_jup
 e =         0.051523476358734575,        # 0.048,             0.058,                 1  # 0.051523476358734575
 i =         89.79,                       # 89.0,              90.0,                  1  # 89.79
-P =         83.28376891641055 * day,     # 82.7 * day,        83.6 * day,            1  # 83.28376891641055 * day
+P =         (83.3 - 1) * day,             (83.3 - 2) * day,   (83.3 + 2) * day,            1  # 83.28376891641055 * day
 Omega =     0.8,                         # -3,                9,                     1  # 0.8
 omega =     296.08745527524496,          # 294,               310,                   1  # 296.08745527524496
 ma =        150.0142378614026,           # 135,               156,                   1  # 150.0142378614026
