--- a/configurations/TOI-4504_lmfit.ini
+++ b/configurations/TOI-4504_lmfit.ini
@@ -25,13 +25,16 @@ rad2deg = 57.29577951308232  # 180 / pi
 result_file = ../results/TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
+max_intervall_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
+                             # If no TT has been found max_intervall_extensions * dt around the expected interval between 2 iterations
+                             # the search for this particular TT will be aborted. (dt comes from the list dts.)
 comment = xxx                # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 20000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 1e5                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -68,6 +71,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
+lmfit = True                 # True for LMfit, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
@@ -168,15 +172,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     0.1 * m_jup,      10.0 * m_jup,       0.5 * m_jup
-radius =    1.012 * r_jup,    #  0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.0445,             0.0,              0.15,              0.035
-i =         89.31542947,      #  86.5,             89.5,              0.5
-;i =         88.8,             #  86.5,             89.5,              0.5
-P =         40.986 * day,       39.7 * day,       41.7 * day,        0.4 * day
-Omega =     0,                  -15,              15,                8
-omega =     93.5,               75,               135,               20
-ma =        280,                180,              359.99,               20
+mass =      1.25 * m_jup,       1.2 * m_jup,      1.35 * m_jup,      0.1 * m_jup
+radius =    1.012 * r_jup       #
+e =         0.108,              0.101,            0.115,             0.007
+i =         89                  #
+P =         41.17 * day,        41.12 * day,      41.20 * day,       0.08 * day
+Omega =     4.7,                -1,               6,                 4
+omega =     87.5,               85.0,             88.3,              2
+ma =        329,                328.5,            330.2,             2
     
     
 [TOI4504c]
@@ -184,12 +187,11 @@ body_type = planet
 primary =   TOI-4504    
 color =     0.99, 0.99, 0.01    
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      0.5 * m_jup
-radius =    0.9897 * r_jup,   #  0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0320,             0.0,              0.10,              0.025
-i =         89.95832464,      #  89.25,            90.0,              0.15
-;i =         89.69,            #  89.25,            90.0,              0.15
-P =         82.5438 * day,      82 * day,         83.7 * day,        0.2 * day
-Omega =     0.8,              #  -15,              15,                3
-omega =     270.9,              180,              359.99,            20
-ma =        173.1,              0,                359.99,            20
+mass =      3.55 * m_jup,       3.4 * m_jup,      3.7 * m_jup,       0.15 * m_jup
+radius =    0.9897 * r_jup      #
+e =         0.052,              0.050,            0.055,             0.002
+i =         89.9                #
+P =         83.26 * day,        83.2 * day,       83.33 * day,       0.1 * day
+Omega =     0.8,                #
+omega =     296.2,              295.7,            296.8,             2
+ma =        151,                150,              152,               1
