--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -25,13 +25,16 @@ rad2deg = 57.29577951308232  # 180 / pi
 result_file = ../results/TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
+max_intervall_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
+                             # If no TT has been found max_intervall_extensions * dt around the expected interval between 2 iterations
+                             # the search for this particular TT will be aborted. (dt comes from the list dts.)
 comment = xxx                # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
-dt = 20000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
+dt = 1e5                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
@@ -68,6 +71,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
+;lmfit = True                 # True for LMfit, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
@@ -81,14 +85,14 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 32                 # Number of mcmc chains
-burn_in = 1                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 256                 # Number of mcmc chains
+burn_in = 500                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
 
 thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 30              # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 250              # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -149,18 +153,18 @@ limb_darkening_parameter_type = q
 
 
 [TOI4504b]
-#           value               lower bound       upper bound        sigma
 body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.01, 0.01
-mass =      10.4 * m_earth,   #  1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
-radius =    2.691 * r_earth,  #  0.01 * r_earth,   5.0 * r_earth,     2.0 * r_earth
-e =         0
-i =         86.5,             #  84.0,             89.0,              1.5
-P =         2.42614 * day,    #  2.426 * day,      2.4263 * day,      0.00005 * day
-Omega =     0
-omega =     90
-ma =        303.6,            #  301.25,           306.25,            1
+#           value               lower bound       upper bound        sigma
+mass =      10.4 * m_earth,   # 1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
+radius =    2.691 * r_earth,  # 0.01 * r_earth,   5.0 * r_earth,     2.0 * r_earth
+e =         0                 #
+i =         86.5,             # 84.0,             89.0,              1.5
+P =         2.42614 * day,    # 2.426 * day,      2.4263 * day,      0.00005 * day
+Omega =     0                 #
+omega =     90                #
+ma =        303.6,            # 301.25,           306.25,            1
 
 
 [TOI4504d]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
@@ -169,13 +173,12 @@ primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
 mass =      1.4166 * m_jup,     0.1 * m_jup,      10.0 * m_jup,       0.5 * m_jup
-radius =    1.012 * r_jup,    #  0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
+radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
 e =         0.0445,             0.0,              0.15,              0.035
-i =         89.31542947,      #  86.5,             89.5,              0.5
-;i =         88.8,             #  86.5,             89.5,              0.5
+i =         89.0              # 86.5,             89.5,              0.5
 P =         40.986 * day,       39.7 * day,       41.7 * day,        0.4 * day
 Omega =     0,                  -15,              15,                8
-omega =     93.5,               75,               135,               20
+omega =     93.5,               60,               130,               20
 ma =        280,                180,              359.99,               20
     
     
@@ -185,11 +188,10 @@ primary =   TOI-4504
 color =     0.99, 0.99, 0.01    
 #           value               lower bound       upper bound        sigma
 mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      0.5 * m_jup
-radius =    0.9897 * r_jup,   #  0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
+radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
 e =         0.0320,             0.0,              0.10,              0.025
-i =         89.95832464,      #  89.25,            90.0,              0.15
-;i =         89.69,            #  89.25,            90.0,              0.15
+i =         89.79,            # 89.25,            90.0,              0.15
 P =         82.5438 * day,      82 * day,         83.7 * day,        0.2 * day
-Omega =     0.8,              #  -15,              15,                3
+Omega =     0.8,              # -15,              15,                3
 omega =     270.9,              180,              359.99,            20
 ma =        173.1,              0,                359.99,            20
