--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -86,13 +86,13 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
 walkers = 256                 # Number of mcmc chains
-burn_in = 500                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+burn_in = 1#500                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
 
 thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 250              # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 10#250              # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -176,10 +176,10 @@ mass =      1.4166 * m_jup,     0.1 * m_jup,      10.0 * m_jup,       0.5 * m_ju
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
 e =         0.0445,             0.0,              0.15,              0.035
 i =         89.0              # 86.5,             89.5,              0.5
-P =         40.986 * day,       39.7 * day,       41.7 * day,        0.4 * day
+P =         40.986 * day,       39.7 * day,       42.2 * day,        0.6 * day
 Omega =     0,                  -15,              15,                8
-omega =     93.5,               60,               130,               20
-ma =        280,                180,              359.99,               20
+omega =     180,                0,                359.99,            120
+ma =        180,                0,                359.99,            120
     
     
 [TOI4504c]
@@ -191,7 +191,7 @@ mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      0.5 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
 e =         0.0320,             0.0,              0.10,              0.025
 i =         89.79,            # 89.25,            90.0,              0.15
-P =         82.5438 * day,      82 * day,         83.7 * day,        0.2 * day
+P =         81.8 * day,         81.7 * day,       82.0 * day,        0.1 * day
 Omega =     0.8,              # -15,              15,                3
-omega =     270.9,              180,              359.99,            20
-ma =        173.1,              0,                359.99,            20
+omega =     180,                0,                359.99,            120
+ma =        180,                0,                359.99,            120
