--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -172,14 +172,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     0.1 * m_jup,      10.0 * m_jup,       0.5 * m_jup
+mass =      1.4166 * m_jup,   # 0.1 * m_jup,      10.0 * m_jup,       0.5 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.0445,             0.0,              0.15,              0.035
+e =         0.0445,           # 0.0,              0.15,              0.035
 i =         89.0              # 86.5,             89.5,              0.5
-P =         40.986 * day,       39.7 * day,       42.2 * day,        0.6 * day
-Omega =     0,                  -15,              15,                8
-omega =     180,                0,                359.99,            120
-ma =        180,                0,                359.99,            120
+P =         41.0 * day,         39.5 * day,       42.5 * day,        0.75 * day
+Omega =     0,                # -15,              15,                8
+omega =     180,              # 0,                359.99,            120
+ma =        180,              # 0,                359.99,            120
     
     
 [TOI4504c]
@@ -187,11 +187,11 @@ body_type = planet
 primary =   TOI-4504    
 color =     0.99, 0.99, 0.01    
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      0.5 * m_jup
+mass =      3.7672 * m_jup,   # 0.1 * m_jup,      10.0 * m_jup,      0.5 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0320,             0.0,              0.10,              0.025
+e =         0.0320,           # 0.0,              0.10,              0.025
 i =         89.79,            # 89.25,            90.0,              0.15
-P =         81.8 * day,         81.7 * day,       82.0 * day,        0.1 * day
+P =         82.0 * day,         81.0 * day,       84.0 * day,        1.5 * day
 Omega =     0.8,              # -15,              15,                3
-omega =     180,                0,                359.99,            120
-ma =        180,                0,                359.99,            120
+omega =     271,              # 0,                359.99,            120
+ma =        173,              # 0,                359.99,            120
