--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -195,3 +195,17 @@ P =         82.0 * day,         81.0 * day,       84.0 * day,        1.5 * day
 Omega =     0.8,              # -15,              15,                3
 omega =     271,              # 0,                359.99,            120
 ma =        173,                0,                359.99,            120
+
+[TOI4504e]
+body_type = planet
+primary =   TOI-4504
+color =     0.99, 0.99, 0.01
+#           value               lower bound       upper bound        sigma
+mass =      3 * m_jup,          0.1 * m_jup,      20.0 * m_jup,      5 * m_jup
+radius =    1 * r_jup,        #
+e =         0.15,               0.0,              0.30,              0.1
+i =         84,                 80,               88.0,              3
+P =         170 * day,          9 * day,          340 * day,         120 * day
+Omega =     0,                  -15,              15,                5
+omega =     180,                0,                359.99,            180
+ma =        180,                0,                359.99,            180
