--- a/configurations/TOI-4504_mcmc.ini
+++ b/configurations/TOI-4504_mcmc.ini
@@ -86,7 +86,7 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
 walkers = 256                 # Number of mcmc chains
-burn_in = 500                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+burn_in = 1#500                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
