--- a/configurations/KEPLER9.ini
+++ b/configurations/KEPLER9.ini
@@ -1,7 +1,7 @@
-;Exceptionally large Transit Timing Variations
-;induced by two resonant warm gas giants in a three planet system.
-;Michaela Vitkova et al
-;https://arxiv.org/abs/2412.05609
+;Kepler-9 revisited, 60% the mass with six times more data, Stefan Dreizler and Aviv Ofir
+;Kepler Object of Interest Network II. Photodynamical modelling of Kepler-9 over 8 years of transit observations, J. Freudenthal et al
+;The multiple planets transiting Kepler-9, I. Inferring stellar properties and planetary compositions, Mathieu Havel et al
+;MODELING Kepler TRANSIT LIGHT CURVES AS FALSE POSITIVES: REJECTION OF BLEND SCENARIOS FOR KEPLER-9, AND VALIDATION OF KEPLER-9 D, A SUPER-EARTH-SIZE PLANET IN A MULTIPLE SYSTEM, Guillermo Torres et al
 
 [Astronomical Constants]     # Do not edit this section!
                              # You may use the astronomical constants defined in this section in
@@ -22,33 +22,27 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
+result_file = ../results/K9.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-max_intervall_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
+max_intervall_extensions = 5 # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_intervall_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
-comment = xxx                # You can use this comment for example as diagram title in your result plots
+comment = K9                 # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
-start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
+start_date = 2454900         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 1e5                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-;starts = [2458401.0, 2460660.0, 2460837.0]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2458401.9, 2460760.0, 2460882.0]  # [days] <float> ending times of the intervalls for which simulation data will be calculated
-;dts =    [1000, 1000, 1000]  # [s] <float> real time differences between simulation iterations inside each intervall
-;starts = [2458401.24, 2458483.05, 2458564.92, 2458647.17, 2459065.09, 2459148.34, 2459230.96, 2459313.11, 2459975.93, 2460059.48, 2460142.46, 2460695.47, 2460718.48, 2460736.58, 2460859.13]  # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2458401.57, 2458483.38, 2458565.29, 2458647.49, 2459065.39, 2459148.63, 2459231.25, 2459313.40, 2459976.21, 2460059.76, 2460142.74, 2460695.60, 2460718.74, 2460736.69, 2460859.31]  # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-;dts =    [600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600, 600]  # [s] <float> real time differences between simulation iterations inside each intervall
-starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
-dts =    [20000]              # [s] <float> real time differences between simulation iterations inside each intervall
+starts = [2454900]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
+ends =   [2456400]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+dts =    [10000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
                              # which data will be stored. total_iterations is usually much larger than the parameter frames. So not
@@ -67,32 +61,22 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
                              # Comment out the first parameter if you do not want to fit the simulation to real data
 ;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
-;flux_file = ../data/TOI-4504/TOI4504_b_transits_27til94.csv  # <string> file with flux measurements (real data)
-;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
-;lmfit = True                 # True for LMfit, False for MCMC
-flux_weight = 1  # weighting flux residuals against rv and tt residuals
-;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
-rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
-
-tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
-;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
-tt_weight = 1  # weighting tt residuals against rv and flux residuals
-eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
-eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
-target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
-                     # times without searching for the precise transit times in the simulated flux
+;lmfit = True                # True for LMfit, False for MCMC
+tt_file = ../data/KEPLER9/tt.csv # <string> file with measured transit times (real data)
+eclipsers_names = KEPLER9b, KEPLER9c  # only primary transits by these bodies are relevant when fitting for TT
+eclipsees_names = KEPLER9             # only transits eclipsing these bodies are relevant when fitting for TT
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 256                 # Number of mcmc chains
-burn_in = 500                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 32#256                 # Number of mcmc chains
+burn_in = 1#500                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
 
 thin_samples = 10            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 250              # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 10#250             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -144,39 +128,39 @@ red_dot_width = 1/235        # <float> width of red dot in light curve plot rela
 body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
-mass = 0.885 * m_sun       # +-0.05
-radius = 0.92 * r_sun
-luminosity = 0.62 * l_sun
-limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
-limb_darkening_2 = 0.3495
-limb_darkening_parameter_type = q
+mass =                          1.05   * m_sun             # ±0.03
+radius =                        0.9742 * r_sun             # ±0.0083
+luminosity =                    0.9742 * 0.9742 * l_sun    # L ∝ R**2 * T**4,  T almost identical to sol
+limb_darkening_1 =              0.351                      # ±0.047
+limb_darkening_2 =              0.269                      # ±0.071
+limb_darkening_parameter_type = u
 
 
 [KEPLER9d]
 body_type = planet
 primary =   KEPLER9
 color =     0.99, 0.01, 0.01
-#           value               lower bound       upper bound        sigma
-mass =      10.4 * m_earth,   # 1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
-radius =    2.691 * r_earth,  # 0.01 * r_earth,   5.0 * r_earth,     2.0 * r_earth
-e =         0                 #
-i =         86.5,             # 84.0,             89.0,              1.5
-P =         2.42614 * day,    # 2.426 * day,      2.4263 * day,      0.00005 * day
-Omega =     0                 #
-omega =     90                #
-ma =        303.6,            # 301.25,           306.25,            1
+mass =      10 * m_earth
+radius =    1.64 * r_earth  # +0.19 −0.14
+e =         0
+i =         90
+P =         1.592851 * day  # ± 0.000045
+Omega =     0
+omega =     0
+ma =        0
+# T0 @ 2455015.0943 +0.0018 −0.0033
 
 
-[KEPLER9b]  # planet d before planet c because the integration (rebound) works best when the innermost planets come first
+[KEPLER9b]
 body_type = planet
 primary =   KEPLER9
-color =     0.01, 0.99, 0.01
+color =     0.01, 0.7, 0.7
 #           value               lower bound       upper bound        sigma
 mass =      1.4166 * m_jup,     0.1 * m_jup,      10.0 * m_jup,       0.5 * m_jup
 radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
 e =         0.0445,             0.0,              0.15,              0.035
 i =         89.0              # 86.5,             89.5,              0.5
-P =         41.0 * day,         39.5 * day,       42.5 * day,        0.75 * day
+P =         19.25 * day,        19.15 * day,      19.35 * day,       0.05 * day
 Omega =     0,                # -15,              15,                8
 omega =     180,              # 0,                359.99,            120
 ma =        180,                0,                359.99,            120
@@ -185,13 +169,13 @@ ma =        180,                0,                359.99,            120
 [KEPLER9c]
 body_type = planet    
 primary =   KEPLER9
-color =     0.99, 0.99, 0.01    
+color =     0.7, 0.01, 0.7
 #           value               lower bound       upper bound        sigma
 mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      0.5 * m_jup
 radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
 e =         0.0320,             0.0,              0.10,              0.025
 i =         89.79,            # 89.25,            90.0,              0.15
-P =         82.0 * day,         81.0 * day,       84.0 * day,        1.5 * day
+P =         38.95 * day,        38.5 * day,       39.5 * day,        0.1 * day
 Omega =     0.8,              # -15,              15,                3
 omega =     271,              # 0,                359.99,            120
 ma =        173,                0,                359.99,            120
