--- a/configurations/KEPLER9.ini
+++ b/configurations/KEPLER9.ini
@@ -150,7 +150,12 @@ omega =     0
 ma =        0
 # T0 @ 2455015.0943 +0.0018 −0.0033
 
-
+##############################################################################################################
+##############################################################################################################
+                                    next: b und c Params ausser P eintragen
+                                    dann ma von b ermitteln, so dass T0 passt
+##############################################################################################################
+##############################################################################################################
 [KEPLER9b]
 body_type = planet
 primary =   KEPLER9
