--- a/configurations/KEPLER9.ini
+++ b/configurations/KEPLER9.ini
@@ -29,7 +29,7 @@ max_intervall_extensions = 5 # In unstable systems or when using a very large dt
                              # If no TT has been found max_intervall_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
 comment = K9                 # You can use this comment for example as diagram title in your result plots
-verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
@@ -70,14 +70,14 @@ eclipsers_names = KEPLER9b, KEPLER9c  # only primary transits by these bodies ar
 eclipsees_names = KEPLER9             # only transits eclipsing these bodies are relevant when fitting for TT
 
 fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
-walkers = 32#256                 # Number of mcmc chains
-burn_in = 1#500                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 256                 # Number of mcmc chains
+burn_in = 500                 # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7                  # Number of mcmc steps after burn-in phase
 moves = (emcee.moves.StretchMove(a=2.0))  # Algorithm emcee uses for changing the parameters after each iteration
 ;moves = (emcee.moves.DEMove(), 0.8),(emcee.moves.DESnookerMove(), 0.2)  # Algorithm emcee uses for changing the parameters after each iteration
 
 thin_samples = 10            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 10#250             # Every chunk_size steps after burn-in phase, results will be saved.
+chunk_size = 250             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
