--- a/configurations/TOI-4504_SIM_X041.ini
+++ b/configurations/TOI-4504_SIM_X041.ini
@@ -22,10 +22,10 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/mcmc/archive/TT_fit/X039_sim_cd11P_TT96/TOI-4504_SIM_X039.json  # <string> simulation results like transit times are saved in this file
+;result_file = ../results/mcmc/archive/TT_fit/X039_sim_cd11P_TT96/TOI-4504_SIM_X039.json  # <string> simulation results like transit times are saved in this file
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
-comment = X039               # You can use this comment for example as diagram title in your result plots
+comment = X041               # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
@@ -135,7 +135,7 @@ color = 0.99, 0.99, 0.99
 mass = 0.885 * m_sun       # +-0.05
 radius = 0.92 * r_sun
 luminosity = 0.62 * l_sun
-limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
+limb_darkening_1 = 0.4765
 limb_darkening_2 = 0.3495
 limb_darkening_parameter_type = q
 
