--- a/configurations/TOI-4504_SIM_X041.ini
+++ b/configurations/TOI-4504_SIM_X041.ini
@@ -26,6 +26,7 @@ rad2deg = 57.29577951308232  # 180 / pi
 result_dt = 1000             # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 comment = X041               # You can use this comment for example as diagram title in your result plots
+transit_precision = 1e-1     # TT, T1, etc. will be calculated from flux with this precision
 ;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
